# 100_prisoners_probability_problem

./: .gitignore  100_prisoners_probability.py  README.md  app.py  bench.py  benchmark_results.csv  pyproject.toml  pytest.ini  requirements.txt
src/prisoners/: cli.py  oracle.py  simulate_cpu.py  simulate_cuda.py  utils.py  viz.py
src/prisoners.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_oracle.py  test_simulation.py  test_utils.py
